# textbook_content_extractor

./: .env.example  .gitignore  .gitmodules  .venv  CLAUDE.md  README.md  main.py  ocr_extract.py  pyproject.toml  run_cpu.py  run_gpu.py
docs/: book-structure.md  draft-json-format.md  word-book-structure.md
output/gpu/: test_grammar.json
server/: app.py  config.py  llm.py  ocr.py
server/static/: index.html  ocr.html
